--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,18 @@
 APP_DEBUG = true
 
 [APP]
-DEFAULT_TIMEZONE = Asia/Shanghai
+DEFAULT_TIMEZONE = Asia/Taipei
 
 [LANG]
 default_lang = zh-cn
+
+[DATABASE]
+TYPE = mysql
+HOSTNAME = 127.0.0.1
+DATABASE = ark
+USERNAME = root
+PASSWORD = Aa12457868
+HOSTPORT = 3306
+PREFIX = ba_
+CHARSET = utf8mb4
+DEBUG = true
