--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-# 通过 Git 部署项目至线上时建议删除的忽略规则
+# 通過 Git 部署項目至線上時建議刪除的忽略規則
 /vendor
 /modules
 /public/*.lock
 /public/index.html
 /public/assets
 
-# 通过 Git 部署项目至线上时可以考虑删除的忽略规则
+# 通過 Git 部署項目至線上時可以考慮刪除的忽略規則
 /public/storage/*
 composer.lock
 pnpm-lock.yaml
