--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "ext-bcmath": "*",
         "ext-iconv": "*",
         "ext-json": "*",
-        "ext-gd": "*"
+        "ext-gd": "*",
+        "phpoffice/phpspreadsheet": "^1.29.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^5.4",
