--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
         "element-plus": "2.9.1",
         "font-awesome": "4.7.0",
         "lodash-es": "4.17.21",
+        "md-editor-v3": "5.1.1",
         "mitt": "3.0.1",
         "nprogress": "0.2.0",
         "pinia": "2.3.0",
@@ -29,8 +30,7 @@
         "v-code-diff": "1.13.1",
         "vue": "3.5.13",
         "vue-i18n": "10.0.5",
-        "vue-router": "4.5.0",
-        "md-editor-v3": "5.1.1"
+        "vue-router": "4.5.0"
     },
     "devDependencies": {
         "@eslint/js": "9.17.0",
@@ -40,7 +40,7 @@
         "@types/sortablejs": "1.15.8",
         "@vitejs/plugin-vue": "5.2.1",
         "async-validator": "4.2.5",
-        "esbuild": "0.24.0",
+        "esbuild": "^0.25.1",
         "eslint": "9.17.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-prettier": "5.2.1",
@@ -52,7 +52,7 @@
         "sass": "1.83.0",
         "typescript": "5.7.2",
         "typescript-eslint": "8.18.1",
-        "vite": "6.0.4",
+        "vite": "^6.2.1",
         "vue-tsc": "2.1.10"
     },
     "pnpm": {
